--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -33,7 +33,7 @@
             <input class="form-control" type="text" name="rut" placeholder="1234567-8" required>
             
             <div class="invalid-feedback">
-                Please enter your RUT
+                Ingrese Rut
             </div>
         </div>
         <div class="form-group was-validated">
@@ -42,12 +42,12 @@
             <input class="form-control" type="password" name="password" placeholder="*******" required>
             
             <div class="invalid-feedback">
-                Please enter your password
+                Ingrese Password
             </div>
         </div>
         <div class="form-group form-check">
             <input class="form-check-input" type="checkbox" id="check">
-            <label class="form-check-label" for="check">Remember me</label>
+            <label class="form-check-label" for="check">Recuerdame</label>
         </div>
         <input class="btn btn-success w-100" type="submit" value="INGRESAR">
     </form>
